Implement correct defaults for /FontMatrix attribute in composite CFF font following analysis by Ken and Masaki (see the comment). Bug 690724.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11980 a1074d23-0009-0410-80fe-cf8c14f379e6